Update sales page content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- End Meta Pixel Code -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Manual de Cultura Comercial Definitiva</title>
+  <title>Planilha Financeira para Casal - Organize seu Dinheiro em 7 Dias</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
