--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -52,7 +52,7 @@
     body {
       font-family: 'Inter', sans-serif;
       scroll-behavior: smooth;
-      background-color: #0a0a0a;
+      background-color: #ffffff;
     }
 
     /* Hide scrollbar for Chrome, Safari and Opera */
@@ -85,7 +85,7 @@
   <link rel="stylesheet" href="/index.css">
 </head>
 
-<body class="bg-[#0a0a0a] text-white">
+<body class="bg-white text-slate-900">
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=2286074645248401&ev=PageView&noscript=1" /></noscript>
 
